--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>pl.strojecki</groupId>
     <artifactId>Hausbrandt</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.target>9</maven.compiler.target>
